--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/kagami.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MioMusic</title>
+    <script src="//at.alicdn.com/t/c/font_4356851_18qc2qvemuz.js"></script>
   </head>
   <body>
     <div id="root"></div>
